# haulsim

./: .dockerignore  .editorconfig  .env.docker.example  .gitattributes  .gitignore  Makefile  README.md  docker-compose.yml  pyrightconfig.json
backend/: .env.example  Dockerfile  app.py  job_store.py  obs.py  pyproject.toml
backend/api/: exports.py  imports.py  jobs.py  system.py
backend/core/: constants.py  reader_config.py  segment.py  sub_reason_bucket.py  zone.py
backend/scripts/: config.json  simulation_generator.py
backend/scripts/core/: __init__.py  amt_cycle_prod_info_message.py  cycle.py  db_config.py  gateway_data_converter.py  gateway_parser_wrapper.py  loss_bucket.py  map_classes.py  reader.py
backend/scripts/simgen/: constants.py  db.py  des.py  geometry.py  loaders.py  model.py  operations.py  roads.py  routes.py  specs.py  zones.py
backend/simulation_analysis/: __init__.py  constants.py  event_generator.py  gps_to_events_converter.py  node_matcher.py  road_navigator.py
backend/tests/: test_app.py  test_core.py  test_determinism.py  test_facade_namespace.py  test_gateway.py  test_golden.py  test_import_fixes.py  test_import_smoke.py  test_job_store.py  test_obs.py  test_reference_data.py  test_road_navigator.py  test_routing.py  test_simulation_analysis.py  test_simulation_generator.py  test_zone_materials.py
backend/tests/golden/: baseline.json  baseline_multi_material.json  generate_golden.py
db/: catalog.py  generate_seed.py
docs/: README.md  application_architecture.md  des_inputs_specification.md  design_system.md  model_structure.md  (+3 more)
(+24 files in other folders)
